deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot
  namespace: app
spec:
  selector:
    app: spring-boot
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
